--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,13 @@ env:
     variables:
         PROJECT: tcc
 
-phases:   
+phases:
+    install:
+        commands:
+            - echo Install started on `date`
+            - sudo apt-get update
+            - sudo apt-get install -y dotnet6
+            
     pre_build:
         commands:
             - echo Restore started on `date`
