--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,8 @@ phases:
     install:
         commands:
             - echo Install started on `date`
-            - sudo apt-get update
-            - sudo apt-get install -y dotnet6
+            - apt-get update
+            - apt-get install -y dotnet6
             
     pre_build:
         commands:
