--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
     post_build:
         commands:
             - echo Publish started on `date`
-            - dotnet publish -c Release  -r ubuntu-x64 -o ./build_output ./${PROJECT}/${PROJECT}.Api.csproj --self-contained false
+            - dotnet publish -c Release  -r ubuntu-x64 -o ./build_output ./${PROJECT}.Api.csproj --self-contained false
 
 artifacts:
     files:
