--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,11 +12,16 @@ phases:
             - echo Install started on `date`
             - apt-get update -y
             - apt-get install -y dotnet6
+            - sudo apt-get install curl
+            - curl -sL https://deb.nodesource.com/setup_current.x | sudo -E bash –
+            - sudo apt-get install -y nodejs
+            - node -v
             
     pre_build:
         commands:
             - echo Restore started on `date`
             - dotnet restore
+            - npm install
       
     build:
         commands:
