Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ stages:
         checkLatest: true
         displayName: 'Install Node.js'
 
-    - script: |
+    - script:
       pushd $(uiSource)
       npm install
       npm run build
