--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,29 +1,83 @@
-# Node.js
-# Build a general Node.js project with npm.
+# Node.js React Web App to Linux on Azure
+# Build a Node.js React app and deploy it to Azure as a Linux web app.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
 - master
 
-pool:
-  vmImage: ubuntu-latest
+variables:
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+  # Azure Resource Manager connection created during pipeline creation
+  azureSubscription: '4859a3c7-efb7-4d7e-a059-7cdf65bdd6b6'
+
+  # Web app name
+  webAppName: 'igortcc'
+
+  # Environment name
+  environmentName: 'igortcc'
+
+  # Agent VM image name
+  vmImageName: 'ubuntu-latest'
+
+stages:
+- stage: Build
+  displayName: Build stage
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+
+  steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '10.x'
+    displayName: 'Install Node.js'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'restore'
+      feedsToUse: 'select'
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
+      projects: '**/*.csproj'
+      arguments: 
 
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
+  - script: |
+      npm cache clean --force
+      rm -rf node_modules
+      npm i
+      npm install
+      npm build run
+    displayName: 'npm install and build'
 
-- script: |
-    npm cache clean --force
-    rm -rf node_modules
-    npm i
-    npm install
-    npm build run
-  displayName: 'npm install and build'
+- stage: Deploy
+  displayName: Deploy stage
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: $(environmentName)
+    pool:
+      vmImage: $(vmImageName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureRmWebAppDeployment@4
+            displayName: 'Azure App Service Deploy: igortcc'
+            inputs:
+              azureSubscription: $(azureSubscription)
+              appType: webAppLinux
+              WebAppName: $(webAppName)
+              packageForLinux: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+              RuntimeStack: 'NODE|10.10'
+              StartupCommand: 'npm run start'
+              ScriptType: 'Inline Script'
+              InlineScript: |
+                npm install
+                npm run build --if-present
