Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -64,6 +64,12 @@ stages:
     - publish: ClientApp/build
       # provide a name for this artifact
       artifact: reactAppBuild
+      
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '/home/vsts/work/1/s/drop'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
 
     
 # This stage will run a 'dotnet build' command, to ensure the project can build successfully. If it passes, we will
@@ -87,6 +93,10 @@ stages:
         projects: '**/*.csproj'
         
     - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '/home/vsts/work/1/s/drop'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
 
 # This stages uses kudu rest API commands to explicitly deploy the api app to Azure app-service. This only runs
 # if the .net-core build stage passed, to make sure we don't deploy broken code. 
@@ -113,4 +123,4 @@ stages:
               azureSubscription: 'Azure subscription 1 (357205d7-4c6d-4aae-8cc6-80df62be6d4c)'
               appType: 'webAppLinux'
               WebAppName: 'igortcc'
-              packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.dll'
+              packageForLinux: '/home/vsts/work/1/s/drop/*.zip'
