--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -119,4 +119,4 @@ stages:
               azureSubscription: 'Azure subscription 1 (357205d7-4c6d-4aae-8cc6-80df62be6d4c)'
               appType: 'webAppLinux'
               WebAppName: 'igortcc'
-              packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+              packageForLinux: '/home/vsts/work/1/s/bin/Debug/net6.0/publish/*.zip'
